@startuml

class AnalyticsController {
	{method} +debug () : AnalyticsDebug
	{method} +getDashboardData () : AnalyticsDashboard
	{method} +getVelocity () : VelocityAnalytics
}


class AnalyticsDashboard {
	{method} +chartData () : List
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +kpis () : AnalyticsKpis
	{method} +toString () : String
}


class AnalyticsDebug {
	{field} -assignments : List
	{field} -timeEntries : List
	{field} -workItems : List
	{method} +assignments () : List
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +timeEntries () : List
	{method} +toString () : String
	{method} +workItems () : List
}


class AnalyticsKpis {
	{field} -avgHoursPerDev : double
	{field} -avgTasksPerDev : double
	{field} -totalHours : double
	{field} -totalTasks : long
	{method} +avgHoursPerDev () : double
	{method} +avgTasksPerDev () : double
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
	{method} +totalHours () : double
	{method} +totalTasks () : long
}


class AnalyticsRepository {
	{field} {static} -DEVELOPER_SPRINT_ANALYTICS_SQL : String
	{field} {static} -SPRINT_VELOCITY_SQL : String
	{field} -jdbcTemplate : JdbcTemplate
	{method} +findDebugData () : AnalyticsDebug
	{method} +findDeveloperSprintAnalytics () : List
	{method} +findSprintVelocityRows () : List
	{method} -getStringOrNull ( rs : ResultSet , column : String ) : String
	{method} -mapDeveloperSprintAnalytics ( rs : ResultSet , rowNum : int ) : DeveloperSprintAnalytics
	{method} -mapSprintVelocityRow ( rs : ResultSet , rowNum : int ) : SprintVelocityRow
}


class AnalyticsService {
	{field} {static} -VELOCITY_TARGET : double
	{method} +getDashboardData () : AnalyticsDashboard
	{method} +getDebugData () : AnalyticsDebug
	{method} +getVelocity () : VelocityAnalytics
	{method} -round1 ( value : double ) : double
	{method} -toSprintVelocity ( row : SprintVelocityRow ) : SprintVelocity
}


class DeveloperSprintAnalytics {
	{field} -developer : String
	{field} -sprint : String
	{field} -tasksCompleted : long
	{field} -totalHoursWorked : double
	{field} -userId : String
	{method} +developer () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +legacyDeveloper () : String
	{method} +legacyRealHours () : double
	{method} +legacySprint () : String
	{method} +legacySprintName () : String
	{method} +legacyTasksCompleted () : long
	{method} +legacyTotalHoursWorked () : double
	{method} +legacyUserId () : String
	{method} +sprint () : String
	{method} +tasksCompleted () : long
	{method} +toString () : String
	{method} +totalHoursWorked () : double
	{method} +userId () : String
}


class SprintVelocity {
	{field} -completedTasks : long
	{field} -endDate : String
	{field} -fulfillmentPct : double
	{field} -sprintId : String
	{field} -sprintName : String
	{field} -sprintStatus : String
	{field} -startDate : String
	{field} -totalTasks : long
	{method} +completedTasks () : long
	{method} +endDate () : String
	{method} +equals ( o : Object ) : boolean
	{method} +fulfillmentPct () : double
	{method} +hashCode () : int
	{method} +sprintId () : String
	{method} +sprintName () : String
	{method} +sprintStatus () : String
	{method} +startDate () : String
	{method} +toString () : String
	{method} +totalTasks () : long
}


class SprintVelocityRow {
	{field} -completedTasks : long
	{field} -endDate : String
	{field} -sprintId : String
	{field} -sprintName : String
	{field} -sprintStatus : String
	{field} -startDate : String
	{field} -totalTasks : long
	{method} +completedTasks () : long
	{method} +endDate () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +sprintId () : String
	{method} +sprintName () : String
	{method} +sprintStatus () : String
	{method} +startDate () : String
	{method} +toString () : String
	{method} +totalTasks () : long
}


class VelocityAnalytics {
	{field} -overallPct : double
	{field} -target : double
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +overallPct () : double
	{method} +sprints () : List
	{method} +target () : double
	{method} +toString () : String
}




AnalyticsController *--  AnalyticsService : analyticsService
AnalyticsDashboard "1" o-- "0..*"  DeveloperSprintAnalytics : chartData
AnalyticsDashboard *--  AnalyticsKpis : kpis
AnalyticsService *--  AnalyticsRepository : analyticsRepository
VelocityAnalytics "1" o-- "0..*"  SprintVelocity : sprints

hide fields
hide methods

@enduml